<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Voting_Screen"
    android:background="@color/colorAccent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <Button
            android:id="@+id/btn_bjp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:textColor="@color/white"
            android:text="@string/bjp"
            android:layout_weight="1"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btn_cng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:textColor="@color/white"
            android:text="@string/cng"
            android:layout_weight="1"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btn_aap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:textColor="@color/white"
            android:text="@string/aap"
            android:layout_weight="1"
            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btn_sad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:textColor="@color/white"
            android:text="@string/sad"
            android:layout_weight="1"
            android:layout_margin="10dp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>